--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,26 +5,44 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "hackillinios.cashr"
-        minSdkVersion 14
+        applicationId 'com.android.cashr'
+        minSdkVersion 16
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName '2.0'
     }
     buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        applicationVariants.all { variant ->
+            variant.outputs.each { output ->
+                def outputFile = output.outputFile
+                if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                    def fileName = outputFile.name.replace(".apk", "-v" + defaultConfig.versionName + "-c" + defaultConfig.versionCode + ".apk")
+                    output.outputFile = new File(outputFile.parent, fileName)
+                }
+            }
         }
+    }
+
+    productFlavors {
+    }
+
+    repositories {
+        mavenCentral();
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    // Android Dependencies
+    compile 'com.android.support:support-v4:21.0.3'
     compile 'com.android.support:appcompat-v7:21.0.3'
-}
-
-dependencies {
-    compile 'com.parse.bolts:bolts-android:1.+'
-    compile fileTree(dir: 'libs', include: 'Parse-*.jar')
+    compile 'com.android.support:recyclerview-v7:21.0.3'
+    compile 'com.android.support:cardview-v7:21.0.3'
+    compile 'com.facebook.rebound:rebound:0.3.6'
+    compile 'org.jsoup:jsoup:1.7.2'
+    // Third-Party Libraries
+//    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+//    compile 'com.afollestad:material-dialogs:0.5.4'
+//    compile 'com.github.mrengineer13:snackbar:0.5.0'
+//    compile 'com.timehop.stickyheadersrecyclerview:library:0.3.4@aar'
 }
