--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,31 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="hackillinios.cashr">
-
-    <application android:allowBackup="true" android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher" android:theme="@style/AppTheme">
-
-    </application>
+<manifest 
+    xmlns:android="http://schemas.android.com/apk/res/android" 
+    package="com.android.cashr">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <application 
+        android:allowBackup="true" 
+        android:label="@string/app_name"
+        android:icon="@drawable/ic_launcher" 
+        android:theme="@style/AppTheme">
+
+        <activity
+            android:name="com.android.cashr.activities.SplashScreenActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.android.cashr.activities.LoginActivity"
+            android:label="@string/app_name"
+            android:parentActivityName="com.android.cashr.activities.SplashScreenActivity">
+        </activity>
+    </application>
 </manifest>
