Added login/create account screens.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,31 +1,38 @@
-<manifest 
-    xmlns:android="http://schemas.android.com/apk/res/android" 
-    package="com.android.cashr">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.android.cashr" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <application 
-        android:allowBackup="true" 
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher" 
-        android:theme="@style/AppTheme">
-
+        android:theme="@style/AppTheme" >
         <activity
-            android:name="com.android.cashr.activities.SplashScreenActivity"
+            android:name=".activities.SplashScreenActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
-
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER"/>
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name="com.android.cashr.activities.LoginActivity"
+            android:name=".activities.LoginActivity"
             android:label="@string/app_name"
-            android:parentActivityName="com.android.cashr.activities.SplashScreenActivity">
+            android:parentActivityName=".activities.SplashScreenActivity" >
+        </activity>
+        <activity
+            android:name=".activities.CreateAccountActivity"
+            android:label="@string/title_activity_create_account"
+            android:parentActivityName=".activities.LoginActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.android.cashr.activities.LoginActivity" />
         </activity>
     </application>
+
 </manifest>
