--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,8 @@ android {
         }
     }
 
-    productFlavors {
-    }
-
     repositories {
+        jcenter();
         mavenCentral();
     }
 }
@@ -41,6 +39,8 @@ dependencies {
     compile 'com.facebook.rebound:rebound:0.3.6'
     compile 'org.jsoup:jsoup:1.7.2'
     // Third-Party Libraries
+    compile 'com.github.traex.rippleeffect:library:1.2.3'
+    compile 'com.github.navasmdc:MaterialDesign:1.+@aar'
 //    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 //    compile 'com.afollestad:material-dialogs:0.5.4'
 //    compile 'com.github.mrengineer13:snackbar:0.5.0'
