Added the login and user account creation activities.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,8 @@ dependencies {
     // Third-Party Libraries
     compile 'com.github.traex.rippleeffect:library:1.2.3'
     compile 'com.github.navasmdc:MaterialDesign:1.+@aar'
+    compile 'com.github.mrengineer13:snackbar:0.5.0'
 //    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 //    compile 'com.afollestad:material-dialogs:0.5.4'
-//    compile 'com.github.mrengineer13:snackbar:0.5.0'
 //    compile 'com.timehop.stickyheadersrecyclerview:library:0.3.4@aar'
 }
